--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -85,3 +85,34 @@
     background-color: #f5f5f5;
     cursor: pointer;
 }
+
+@media screen and (max-width: 1300px) {
+    .navbar span{
+        display: none;
+    }
+
+    .navbar h2 {
+        display: none;
+    }
+
+    .navbar {
+        align-items: center;
+        gap: 2rem;
+    }
+}
+
+@media screen and (max-width: 990px) {
+    .navbar{
+        flex-direction: row;
+        justify-content: center;
+        width: 100%;
+        align-items: center;
+        background-color: #fff;
+    }
+}
+
+@media screen and (max-width: 590px) {
+   .navbar {
+    gap: 1px;
+   }
+}
