--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -68,14 +68,14 @@ body {
     border-left: 1px solid #c6c6c6;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1300px) {
+@media screen and (max-width: 1300px) {
     .image {
-        height: 10rem;
+        height: 12rem;
     }
     
     .image img{
-        width: 14rem;
-        height: 10rem;
+        width: 16rem;
+        height: 12rem;
     }
 
     
@@ -102,14 +102,14 @@ body {
     
 }
 
-@media screen and (min-width: 671px) and (max-width: 1024px) {
+@media screen and (max-width: 1100px) {
     .image {
-        height: 6rem;
+        height: 10rem;
     }
     
     .image img{
-        width: 10rem;
-        height: 6rem;
+        width: 14rem;
+        height: 10rem;
     }
 
     
@@ -136,7 +136,27 @@ body {
     
 }
 
+@media screen and (max-width: 1100px) {
+    .image {
+        height: 12rem;
+    }
+    
+    .image img{
+        width: 16rem;
+        height: 12rem;
+    }
+}
+
 @media screen and (max-width: 760px) {
+
+    .image {
+        height: 8rem;
+    }
+    
+    .image img{
+        width: 12rem;
+        height: 8rem;
+    }
     .enlarged-photo-backdrop {
         flex-direction: column;
     }
@@ -162,6 +182,15 @@ body {
 }
 
 @media screen and (max-width: 560px) {
+
+    .image {
+        height: 8rem;
+    }
+    
+    .image img{
+        width: 12rem;
+        height: 8rem;
+    }
     
     .descriptionModal {
         max-height: 38%;
