--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -157,6 +157,111 @@
     border-right: 1px solid #c6c6c6;
   }
 
-  @media screen and (min-width: 768px) and (max-width: 1300px) {
+  @media screen and (max-width: 1300px) {
+    nav{
+      max-width: 8%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .content{
+      margin-left: 6rem;
+      padding: 2rem 7rem;
+    }
+  }
+
+  @media screen and (max-width: 1080px) { 
+      .content {
+        padding: 2rem 5rem;
+      }
+  }
+
+  @media screen and (max-width: 990px) { 
+
+    nav{
+      border-right: none;
+      max-width: none;
+      width: 100%;
+      z-index: 2;
+      height: auto;
+      padding: 0;
+    }
+ 
+    .content {
+      padding: 2rem 1rem;
+      margin-left: 0;
+      margin-top: 3rem;
+    }
+
+    .home{
+      flex-direction: column;
+      align-items: center;
+    }
+}
+
+@media screen and (max-width: 790px) {
+
+  header {
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    gap: 3rem;
+  }
+
+  header img {
+    width: 100px;
+    height: 100px;
+  }
+  
+  
+  .navheader .user span {
+    margin-right: 0.4rem;
+    font-size: 1rem;
+   
+  }
+  
+  .navheader .user button {
+    font-weight: 600;
+    font-size: .8rem;
+    padding: 4px 10px;
     
   }
+  
+  
+  .navheader .stats {
+    gap: 1.2rem;
+  }
+  
+  .highlights {
+    display: flex;
+    padding-left: 1rem;
+    margin-bottom: 4rem;
+  }
+  
+  .highlights img{
+    width: 60px;
+    height: 60px;
+  }
+  
+}
+ 
+@media screen and (max-width: 590px) {
+    .navheader{
+      text-align: center;
+      padding: 0rem 1rem;
+    }
+  header {
+    flex-direction: column;
+  }
+  .navheader .user button {
+    font-weight: 600;
+    font-size: .8rem;
+    padding: 2px 5px;
+  }
+
+  .edit{
+    display: none;
+  }
+}
